--- a/rule.ini
+++ b/rule.ini
@@ -12,6 +12,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/Direct.list?token=GHSAT0AAAAAACWTEXRUA6PJ6SEGWTTIO4W4ZYBFVEQ
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/ProxyLite.list?token=GHSAT0AAAAAACWTEXRVFNJWX75MOU56H4M6ZYBFXFQ
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/GoogleCN.list
@@ -24,6 +25,9 @@ ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaIp.list
 ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaDomain.list
 ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+ruleset=🎯 全球直连,[]GEOSITE,CN
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🚀 中国代理,[]GEOIP,CN
