--- a/rule.ini
+++ b/rule.ini
@@ -9,8 +9,8 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/Direct.list?token=GHSAT0AAAAAACWTEXRUA6PJ6SEGWTTIO4W4ZYBFVEQ
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/ProxyLite.list?token=GHSAT0AAAAAACWTEXRVFNJWX75MOU56H4M6ZYBFXFQ
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/Direct.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/WangChairman/clashrule/refs/heads/main/ProxyLite.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
