--- a/rule.ini
+++ b/rule.ini
@@ -26,7 +26,7 @@ ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaIp.list
 ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaDomain.list
 ruleset=🚀 中国代理,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🎯 全球直连,[]GEOIP,CN
