--- a/rule.ini
+++ b/rule.ini
@@ -40,7 +40,7 @@ custom_proxy_group=🚀 中国代理`select`[]DIRECT`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 中国代理
 ;custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选择`[]♻️ 自动选择`
 
 enable_rule_generator=true
 overwrite_original_rules=true
